zservice/shobteeprajump-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shobteeprajump-deployment
  creationTimestamp: null
  labels:
    app: shobteeprajump-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shobteeprajump-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: shobteeprajump-app
    spec:
      containers:
      - name: shobteeprajump-app
        image:  justtod/shobteeprajump-server:v0.2.3
        ports:
          - containerPort: 3000
        resources: {}
status: {}
