zservice/shobteeprajump-payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shobteeprajump-payment-deployment
  creationTimestamp: null
  labels:
    app: shobteeprajump-payment-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shobteeprajump-payment-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: shobteeprajump-payment-app
    spec:
      containers:
      - name: shobteeprajump-payment-app
        image: diskette42/shobteeprajump-payment-app:3.0.0
        ports:
          - containerPort: 8001
        resources: {}
status: {}
